avoid java 17 exceptions